[Collapse]fix: add z-index to submenu

--- a/src/app/shared/collapse/collapse.component.scss
+++ b/src/app/shared/collapse/collapse.component.scss
@@ -15,6 +15,7 @@
       position: relative;
       .collapse__menu {
         position: absolute;
+        z-index: 1000;
         top: 2.2rem;
         left: 0rem;
         background: white;
